--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -2,5 +2,5 @@ technicalKnowledge: 5
 groupGranularity: 3
 instructions: Highlight key changes in the diff.  Tests, documentation,
   dependencies, and other changes should have a low priority.
-language: Spanish
+language: English
 writingStyle: Normal
