--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -1,6 +1,7 @@
 technicalKnowledge: 5
 groupGranularity: 3
-instructions: Highlight key changes in the diff.  Tests, documentation,
-  dependencies, and other changes should have a low priority.
+instructions: "Highlight key changes in the diff.  Tests, documentation,
+  dependencies, and other changes should have a low priority. Use emojis to
+  separate key points. "
 language: English
 writingStyle: Normal
