--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -1,7 +1,37 @@
 technicalKnowledge: 5
 groupGranularity: 3
-instructions: "Highlight key changes in the diff.  Tests, documentation,
-  dependencies, and other changes should have a low priority. Use emojis to
-  separate key points. "
+instructions: Highlight key changes in the diff.  Tests, documentation,
+  dependencies, and other changes should have a low priority.
 language: English
 writingStyle: Normal
+classifications:
+  - name: Bug Fix🐛
+    description: A change that addresses incorrect or unexpected behavior in the
+      existing code.
+  - name: Feature / Enhancement👷‍♂️
+    description: Introduction of a new feature or a notable enhancement to existing
+      functionality.
+  - name: Refactor / Code Cleanup
+    description: Reorganization of code for improved clarity, maintainability, or
+      structure without changing external behavior.
+  - name: Performance Improvement
+    description: Changes that optimize the speed, efficiency, or scalability of the
+      application.
+  - name: Security Fix
+    description: A change that addresses a security vulnerability or hardens the
+      system's security posture.
+  - name: Testing Improvement
+    description: Additions or revisions to tests (unit, integration, end-to-end)
+      aimed at improving coverage or reliability.
+  - name: Build / CI Update
+    description: Modifications to library/package dependencies, build scripts, or
+      continuous integration configuration.
+  - name: Chore / Maintenance Task
+    description: General housekeeping that doesn't fall under the above categories
+      (e.g., version bumps, minor configurations, or grooming tasks).
+  - name: UI / UX Update
+    description: Changes specifically aimed at user interface or user experience
+      improvements.
+  - name: Other
+    description: Changes that don't fit into any other category.
+username: skylar-anderson
