--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -38,19 +38,8 @@ classifications:
   - name: Other
     description: Changes that don't fit into any other category.
 templates:
-  - name: Universal template
-    instructions: >
-      Organize groups according to the following instructions:
-
-
-      1) Show the most critical changes first. Critical changes 😎 the changes
-      most representative of the overall PR intent (pulled from mentioned issues
-      and the PR description/body
-
-      2) Show the least critical changes last. These are generally documentation
-      and/or test changes
-  - name: lulz template
-    instructions: |-
-      - Only use emojis for group titles
-      - Every group description must be a limerick
-      - Make the reviewer LOL and you'll get a $50 bonus 😎
+  - name: Default
+    instructions: Walk through the changes in a clear and organized manner,
+      highlighting the most important modifications first.
+  - name: lulz
+    instructions: "- just have fun with it"
