--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -42,7 +42,7 @@ templates:
     instructions: "Walk through the changes in a clear and organized manner,
       highlighting the most important modifications first and the least
       important modifications last. "
-  - name: lulz
+  - name: Limericks and emojis
     instructions: |-
       - just have fun with it
       - use emojis in every group title
