--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -46,3 +46,5 @@ templates:
       - Walk through the changes in a clear and organized manner
       - The changes most reflective of the PRs intent should be shown first
       - Documentation, tests, and cosmetic changes should be shown last
+  - name: I love docs!
+    instructions: Show documentation updates first, I just love docs!
