--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -41,14 +41,14 @@ classifications:
     description: Changes specifically aimed at improving accessibility
 templates:
   - name: Default
-    instructions: >-
+    instructions: |-
       - Walk through the changes in a clear and organized manner
-
       - The changes most reflective of the PRs intent should be shown first
-
       - Documentation, tests, and cosmetic changes should be shown last
-
-
+  - name: Docs
+    instructions: I am a copywriter, please show documentation changes first
+  - name: Checklist
+    instructions: >-
       For each group, you must answer the following questions in the group's
       description:
 
@@ -59,5 +59,3 @@ templates:
       - Why is it written this way?
 
       - Is there any security concerns here?
-  - name: Docs
-    instructions: I am a copywriter, please show documentation changes first
