Update Hypersight configuration

--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -33,10 +33,16 @@ classifications:
     description: Changes that don't fit into any other category.
 templates:
   - name: Default
-    groupInstructions: Highlight the most important changes in the diff. Tests,
-      documentation, dependencies, and other changes should have a low priority.
+    groupInstructions: >-
+      Highlight the most important changes in the diff. Tests, documentation,
+      dependencies, and other changes should have a low priority.  
+
+
+      For important changes, go into detail explaining the changes. After each
+      section, include a glossary that defines any technical terms that you
+      used. 
     summaryInstructions: "Provide a concise summary of the overall changes and their
       impact. Do not exceed 100 words. "
     language: English
     writingStyle: Normal
-    technicalKnowledge: 5
+    technicalKnowledge: 2
