Update Hypersight configuration

--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -35,14 +35,12 @@ templates:
   - name: Default
     groupInstructions: >-
       Highlight the most important changes in the diff. Tests, documentation,
-      dependencies, and other changes should have a low priority.  
+      dependencies, and other changes should have a low priority.
 
 
-      For important changes, go into detail explaining the changes. After each
-      section, include a glossary that defines any technical terms that you
-      used. 
+      test
     summaryInstructions: "Provide a concise summary of the overall changes and their
       impact. Do not exceed 100 words. "
     language: English
     writingStyle: Normal
-    technicalKnowledge: 2
+    technicalKnowledge: 5
