Update Hypersight configuration

--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -37,6 +37,6 @@ templates:
       documentation, dependencies, and other changes should have a low priority.
     summaryInstructions: "Provide a concise summary of the overall changes and their
       impact. Do not exceed 100 words. "
-    language: English
+    language: Spanish
     writingStyle: Normal
-    technicalKnowledge: 2
+    technicalKnowledge: 5
