--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -35,6 +35,6 @@ templates:
   - name: Default
     groupInstructions: Highlight the most important changes in the diff. Tests,
       documentation, dependencies, and other changes should have a low priority.
-    language: Mandarin
+    language: English
     writingStyle: Normal
     technicalKnowledge: 5
