Update Hypersight configuration

--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -66,6 +66,12 @@ templates:
 
 
       [summary of changes]
+
+
+      ### Glossary
+
+
+      [define any technical terms used in previous sections]
     language: English
     writingStyle: Concise
     technicalKnowledge: 1
