Update Hypersight configuration

--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -100,8 +100,8 @@ templates:
       - I do not need you to render every change--just the changes necessary to
       help me understand customer-facing changes. 
 
-      - Avoid getting into detail on tests or other secondary changes that are
-      irrelevant for customer facing docs
+      - Do not tell me about tests or other secondary changes that do not impact
+      the customer experience. 
     language: English
     writingStyle: Explanatory
     technicalKnowledge: 5
