Update Hypersight configuration

--- a/.github/hypersight.yml
+++ b/.github/hypersight.yml
@@ -72,7 +72,7 @@ templates:
 
 
       [define any technical terms used in previous sections]
-    language: English
+    language: Spanish
     writingStyle: Concise
     technicalKnowledge: 1
   - name: Risk assessment
